# acpica

./: BUILD.gn  BUILD.zircon.gn  OWNERS  README.fuchsia  groups  project.config
include/: acpica
source/common/: acfileio.c  acgetline.c  adfile.c  adisasm.c  adwalk.c  ahids.c  ahpredef.c  ahtable.c  ahuuids.c  cmfsize.c  dmextern.c  dmrestag.c  dmswitch.c  dmtable.c  dmtables.c  dmtbdump.c  dmtbdump1.c  dmtbdump2.c  dmtbdump3.c  dmtbinfo.c  dmtbinfo1.c  dmtbinfo2.c  dmtbinfo3.c  getopt.c
source/compiler/: aslallocate.c  aslanalyze.c  aslascii.c  aslbtypes.c  aslcache.c  aslcodegen.c  aslcompile.c  aslcompiler.h  aslcompiler.l  aslcompiler.y  aslcstyle.y  asldebug.c  asldefine.h  aslerror.c  aslexternal.c  aslfileio.c  aslfiles.c  aslfold.c  aslglobal.h  aslhelp.c  aslhelpers.y  aslhex.c  aslkeywords.y  asllength.c  asllisting.c  asllistsup.c  aslload.c  asllookup.c  aslmain.c  aslmap.c  aslmapenter.c  aslmapoutput.c  aslmaputils.c  aslmessages.c  aslmessages.h  aslmethod.c  aslnamesp.c  asloffset.c  aslopcodes.c  asloperands.c  (+61 more)
source/components/debugger/: dbcmds.c  dbconvert.c  dbdisply.c  dbexec.c  dbfileio.c  dbhistry.c  dbinput.c  dbmethod.c  dbnames.c  dbobject.c  dbstats.c  dbtest.c  dbutils.c  dbxface.c
source/components/disassembler/: dmbuffer.c  dmcstyle.c  dmdeferred.c  dmnames.c  dmopcode.c  dmresrc.c  dmresrcl.c  dmresrcl2.c  dmresrcs.c  dmutils.c  dmwalk.c
source/components/dispatcher/: dsargs.c  dscontrol.c  dsdebug.c  dsfield.c  dsinit.c  dsmethod.c  dsmthdat.c  dsobject.c  dsopcode.c  dspkginit.c  dsutils.c  dswexec.c  dswload.c  dswload2.c  dswscope.c  dswstate.c
source/components/events/: evevent.c  evglock.c  evgpe.c  evgpeblk.c  evgpeinit.c  evgpeutil.c  evhandler.c  evmisc.c  evregion.c  evrgnini.c  evsci.c  evxface.c  evxfevnt.c  evxfgpe.c  evxfregn.c
source/components/executer/: exconcat.c  exconfig.c  exconvrt.c  excreate.c  exdebug.c  exdump.c  exfield.c  exfldio.c  exmisc.c  exmutex.c  exnames.c  exoparg1.c  exoparg2.c  exoparg3.c  exoparg6.c  exprep.c  exregion.c  exresnte.c  exresolv.c  exresop.c  exserial.c  exstore.c  exstoren.c  exstorob.c  exsystem.c  extrace.c  exutils.c
source/components/hardware/: hwacpi.c  hwesleep.c  hwgpe.c  hwpci.c  hwregs.c  hwsleep.c  hwtimer.c  hwvalid.c  hwxface.c  hwxfsleep.c
source/components/namespace/: nsaccess.c  nsalloc.c  nsarguments.c  nsconvert.c  nsdump.c  nsdumpdv.c  nseval.c  nsinit.c  nsload.c  nsnames.c  nsobject.c  nsparse.c  nspredef.c  nsprepkg.c  nsrepair.c  nsrepair2.c  nssearch.c  nsutils.c  nswalk.c  nsxfeval.c  nsxfname.c  nsxfobj.c
source/components/parser/: psargs.c  psloop.c  psobject.c  psopcode.c  psopinfo.c  psparse.c  psscope.c  pstree.c  psutils.c  pswalk.c  psxface.c
source/components/resources/: rsaddr.c  rscalc.c  rscreate.c  rsdump.c  rsdumpinfo.c  rsinfo.c  rsio.c  rsirq.c  rslist.c  rsmemory.c  rsmisc.c  rsserial.c  rsutils.c  rsxface.c
source/components/tables/: tbdata.c  tbfadt.c  tbfind.c  tbinstal.c  tbprint.c  (+4 more)
source/include/: acapps.h  acbuffer.h  acclib.h  accommon.h  acconfig.h  acconvert.h  acdebug.h  acdisasm.h  acdispat.h  acevents.h  acexcep.h  acglobal.h  achware.h  acinterp.h  aclocal.h  acmacros.h  acnames.h  acnamesp.h  acobject.h  acopcode.h  acoutput.h  acparser.h  acpi.h  acpiosxf.h  acpixf.h  acpredef.h  acresrc.h  acrestyp.h  acstruct.h  actables.h  actbinfo.h  actbl.h  actbl1.h  actbl2.h  actbl3.h  actypes.h  acutils.h  acuuid.h  amlcode.h  amlresrc.h
(+125 files in other folders)
